[gd_scene load_steps=7 format=3 uid="uid://bfil337fp1adw"]

[ext_resource type="Script" path="res://main.gd" id="1_opqku"]
[ext_resource type="Texture2D" uid="uid://do6jmfoy5d65t" path="res://assets/tilemap_packed.png" id="1_xtjhh"]
[ext_resource type="PackedScene" uid="uid://b3m30hktp0qcg" path="res://scenes/player.tscn" id="2_vr2es"]
[ext_resource type="PackedScene" uid="uid://dcbflmykrwm6w" path="res://scenes/player_soldier.tscn" id="3_60n7b"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_n5v16"]
texture = ExtResource("1_xtjhh")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0

[sub_resource type="TileSet" id="TileSet_tlapd"]
sources/0 = SubResource("TileSetAtlasSource_n5v16")

[node name="Main" type="Node2D"]
script = ExtResource("1_opqku")
player_scene = ExtResource("2_vr2es")
player_soldier_scene = ExtResource("3_60n7b")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_tlapd")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(0, 131072, 1, 65536, 131072, 1, 131072, 131072, 1, 262144, 131072, 1, 327680, 131072, 1, 393216, 131072, 1, 458752, 131072, 1, 524288, 131072, 1, 1, 131072, 1, 524289, 131072, 1, 2, 131072, 1, 524290, 131072, 1, 3, 131072, 1, 524291, 131072, 1, 4, 131072, 1, 524292, 131072, 1, 5, 131072, 1, 524293, 131072, 1, 6, 131072, 1, 524294, 131072, 1, 7, 131072, 1, 524295, 131072, 1, 8, 131072, 1, 524296, 131072, 1, 9, 131072, 1, 524297, 131072, 1, 10, 131072, 1, 524298, 131072, 1, 11, 131072, 1, 524299, 131072, 1, 12, 131072, 1, 524300, 131072, 1, 13, 131072, 1, 524301, 131072, 1, 14, 131072, 1, 524302, 131072, 1, 15, 131072, 1, 65551, 131072, 1, 131087, 131072, 1, 196623, 131072, 1, 262159, 131072, 1, 327695, 131072, 1, 393231, 131072, 1, 458767, 131072, 1, 524303, 131072, 1, 196608, 131072, 1, 65537, 131072, 1, 65538, 131072, 1, 131074, 131072, 1, 131075, 131072, 1, 196611, 131072, 1, 196612, 131072, 1, 196613, 131072, 1, 262149, 131072, 1, 262150, 131072, 1, 262148, 131072, 1, 196610, 131072, 1, 131073, 131072, 1, 196609, 131072, 1, 262145, 131072, 1, 327681, 131072, 1, 393217, 131072, 1, 458753, 131072, 1, 262146, 131072, 1, 327682, 131072, 1, 393218, 131072, 1, 458754, 131072, 1, 65539, 131072, 1, 262147, 131072, 1, 327683, 131072, 1, 393219, 131072, 1, 458755, 131072, 1, 65540, 131072, 1, 131076, 131072, 1, 327684, 131072, 1, 393220, 131072, 1, 458756, 131072, 1, 65541, 131072, 1, 131077, 131072, 1, 327685, 131072, 1, 393221, 131072, 1, 458757, 131072, 1, 65542, 131072, 1, 131078, 131072, 1, 196614, 131072, 1, 327686, 131072, 1, 393222, 131072, 1, 458758, 131072, 1, 65543, 131072, 1, 131079, 131072, 1, 196615, 131072, 1, 262151, 131072, 1, 327687, 131072, 1, 393223, 131072, 1, 458759, 131072, 1, 65544, 131072, 1, 131080, 131072, 1, 196616, 131072, 1, 262152, 131072, 1, 327688, 131072, 1, 393224, 131072, 1, 458760, 131072, 1, 65545, 131072, 1, 131081, 131072, 1, 196617, 131072, 1, 262153, 131072, 1, 327689, 131072, 1, 393225, 131072, 1, 458761, 131072, 1, 65546, 131072, 1, 131082, 131072, 1, 196618, 131072, 1, 262154, 131072, 1, 327690, 131072, 1, 393226, 131072, 1, 458762, 131072, 1, 65547, 131072, 1, 131083, 131072, 1, 196619, 131072, 1, 262155, 131072, 1, 327691, 131072, 1, 393227, 131072, 1, 458763, 131072, 1, 65548, 131072, 1, 131084, 131072, 1, 196620, 131072, 1, 262156, 131072, 1, 327692, 131072, 1, 393228, 131072, 1, 458764, 131072, 1, 65549, 131072, 1, 131085, 131072, 1, 196621, 131072, 1, 262157, 131072, 1, 327693, 131072, 1, 393229, 131072, 1, 458765, 131072, 1, 65550, 131072, 1, 131086, 131072, 1, 196622, 131072, 1, 262158, 131072, 1, 327694, 131072, 1, 393230, 131072, 1, 458766, 131072, 1)

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="NeutralSoldier" type="Sprite2D" parent="."]
texture = ExtResource("1_xtjhh")
region_enabled = true
region_rect = Rect2(272, 96, 16, 16)

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
